[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["nanacychang <nadia.cy.chang@gmail.com>"]
description = ""
name = "final-projecttry"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
[tool.poetry.dev-dependencies]
